fixed overflow problem with the navigation

--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,7 @@ nav figure {
   width: 100%;
   height: 100%;
   background: #569CD6;
+  overflow: hidden;
 }
 
 .mobilenav li {
